syntax = "proto3";

package grpc.health.v1;

message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
  }
  ServingStatus status = 1;
}

message SetStatusRequest {
  string service = 1;
  int32 status = 2;
}

message SetStatusResponse {
}

service Health {
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse);
  rpc SetStatus(SetStatusRequest) returns (SetStatusResponse);
}
